feat(feature/s-19): src/test/java/com/example/steps/S19Steps.java